Fix CSP on localhost

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                      object-src 'none'; 
                      style-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; 
                      font-src 'self' https://cdn.jsdelivr.net; 
-                     connect-src 'self' https://boardgamegeek.com https://bgg-proxy.fly.dev;
+                     connect-src 'self' https://boardgamegeek.com https://bgg-proxy.fly.dev http://localhost:8080;
                      img-src 'self' data:;"
         />
         <link
