--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Player counts</title>
+        <link rel="icon" type="image/x-icon" href="/src/assets/favicon.ico">
     </head>
     <body>
         <div id="root"></div>
